# eerium

./: .clang-format  CMakeLists.txt  README.md  configure.sh
resources/fonts/: UncialAntiqua-Regular-OFL.txt
resources/textures/: diamond-mask.psd
src/: Colors.hpp  Game.cpp  Game.hpp  IsoGrid.hpp  Level.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  Player.hpp  main.cpp
src/objects/: BaseObject.hpp  Player.hpp  Rock.hpp  Tree.hpp
src/sdl/: Color.hpp  Context.cpp  Context.hpp  Exception.hpp  Font.cpp  Font.hpp  FpsCounter.cpp  FpsCounter.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Window.cpp  Window.hpp
src/ui/: BaseElement.hpp  ClickableText.hpp  Container.hpp
